# matrix_lib

./: README.md  mkdocs.yml  pyproject.toml
docs/: api.md  development.md  index.md  tutorial.md
examples/: block_matrix_demo.py  poisson_1d.py
src/: __init__.py
src/matlib_z3342_tem1_msgvk/: __init__.py  base.py  block.py  dense.py  errors.py  solvers.py  symmetric.py
tests/: test_block.py  test_dense.py  test_integration.py  test_solvers.py
